--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "projectt",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node backend/server.js",
     "backend": "nodemon backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,6 +22,7 @@
     "mongoose": "^8.9.6",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "uuidv4": "^6.2.13"
   }
 }
